fix: same spacing in checkbox and radio groups

--- a/packages/css/checkbox.css
+++ b/packages/css/checkbox.css
@@ -200,6 +200,6 @@
 .ds-checkbox__group {
   display: flex;
   flex-direction: column;
-  gap: var(--ds-spacing-5);
+  gap: var(--ds-spacing-4);
   width: fit-content;
 }
