--- a/packages/css/radio.css
+++ b/packages/css/radio.css
@@ -171,7 +171,7 @@
 .ds-radio-group {
   display: flex;
   flex-direction: column;
-  gap: var(--ds-spacing-3);
+  gap: var(--ds-spacing-4);
   width: fit-content;
 }
 
